--- a/src/home.html
+++ b/src/home.html
@@ -19,8 +19,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <!-- Swiper CDN CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
   <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+  <style>
+      .tiny-slider-nav button {
+  width: .75rem; height: .75rem;
+  border-radius: 9999px;
+  background-color: #d1d5db;
+}
+.tiny-slider-nav .tns-nav-active {
+  background-color: #ef4444; /* red‑500 */
+}
+  </style>
 </head>
 <body>
 <!-- Tagline Start -->
@@ -939,12 +951,206 @@
         </div>
         <!-- Section Header End -->
 
-        
-    </div>
+        <!-- swiper cards start -->
+        <div class="swiper testimonial-swiper mt-20">
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide text-center">
+                    <div class="bg-white/10 p-6 rounded shadow relative">
+                        <i data-feather="feather" class="text-red-500 w-10 h-10 mb-4 mx-auto"></i>
+                        <p class="text-slate-500 mb-3">" It seems that only fragments of the original text remain in the Lorem Ipsum texts used today. "</p>
+                        <div class="flex justify-center text-amber-400 space-x-1 mb-4">
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        </div>
+                        <img src="../assets/img/man1.jpg" class="size-14 rounded-full mx-auto shadow shadow-gray-700" alt="">
+                        <h6 class="mt-2 font-bold text-red-600 ">Calvin Carlo</h6>
+                        <span class="text-slate-400 text-sm">Manager</span>
+                    </div>
+                </div>
 
+                <!-- Slide 2 -->
+                <div class="swiper-slide text-center">
+                    <div class="bg-white/10 p-6 rounded shadow relative">
+                        <i data-feather="feather" class="text-red-500 w-10 h-10 mb-4 mx-auto"></i>
+                        <p class="text-slate-500 mb-3">" It seems that only fragments of the original text remain in the Lorem Ipsum texts used today. "</p>
+                        <div class="flex justify-center text-amber-400 space-x-1 mb-4">
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        </div>
+                        <img src="../assets/img/women1.jpg" class="size-14 rounded-full mx-auto shadow shadow-gray-700" alt="">
+                        <h6 class="mt-2 font-bold text-red-600 ">Jemina Cloney</h6>
+                        <span class="text-slate-400 text-sm">CEO</span>
+                    </div>
+                </div>
+
+                <!-- Slide 3 -->
+                <div class="swiper-slide text-center">
+                    <div class="bg-white/10 p-6 rounded shadow relative">
+                        <i data-feather="feather" class="text-red-500 w-10 h-10 mb-4 mx-auto"></i>
+                        <p class="text-slate-500 mb-3">" It seems that only fragments of the original text remain in the Lorem Ipsum texts used today. "</p>
+                        <div class="flex justify-center text-amber-400 space-x-1 mb-4">
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        </div>
+                        <img src="../assets/img/man2.jpg" class="size-14 rounded-full mx-auto shadow shadow-gray-700" alt="">
+                        <h6 class="mt-2 font-bold text-red-600 ">Divid Carlo</h6>
+                        <span class="text-slate-400 text-sm">Manager</span>
+                    </div>
+                </div>
+
+                <!-- Slide 4 -->
+                <div class="swiper-slide text-center">
+                    <div class="bg-white/10 p-6 rounded shadow relative">
+                        <i data-feather="feather" class="text-red-500 w-10 h-10 mb-4 mx-auto"></i>
+                        <p class="text-slate-500 mb-3">" It seems that only fragments of the original text remain in the Lorem Ipsum texts used today. "</p>
+                        <div class="flex justify-center text-amber-400 space-x-1 mb-4">
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        <i data-feather="star" class="w-4 h-4"></i>
+                        </div>
+                        <img src="../assets/img/women2.jpg" class="size-14 rounded-full mx-auto shadow shadow-gray-700" alt="">
+                        <h6 class="mt-2 font-bold text-red-600 ">Cristino Murfee</h6>
+                        <span class="text-slate-400 text-sm">CTO</span>
+                    </div>
+                </div>
+            </div>
+            <!-- Pagination -->
+            <!-- <div class="swiper-pagination mt-6"></div> -->
+        </div>
+        <!-- swiper cards end -->
+    </div>
 </section>
 <!-- Testimonial Section End -->
 
+<!-- Blog Section Start -->
+<section class="bg-slate-950 py-10 md:py-16 lg:py-20 xl:py-24">
+    <div class="container mx-auto px-3 md:px-6 lg:px-8">
+        <!-- Section Header Start -->
+        <div class="flex flex-col justify-center items-center gap-5 mb-6">
+            <h2 class="text-3xl lg:text-5xl font-bold text-slate-100">Latest Blog Posts</h2>
+            <p class="text-slate-300 text-lg text-center">Stay updated with our latest news and articles. You can also follow us on social media for more information.</p>
+        </div>
+        <!-- Section Header End -->
+
+        <!-- Blog Recent Posts Start -->
+            <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-20 gap-6">
+                <!-- Card 1 -->
+                <div class=" group relative overflow-hidden">
+                    <div class="relative overflow-hidden rounded-md shadow-sm shadow-gray-800">
+                        <img src="../assets/img/island3.jpg" class="group-hover:scale-110 group-hover:rotate-3 duration-500 w-full" alt="">
+                        <div class="absolute top-0 start-0 p-4 opacity-0 group-hover:opacity-100 duration-500">
+                            <span class="bg-red-500 text-white text-[12px] px-2.5 py-1 font-medium rounded-md">Travel</span>
+                        </div>
+                    </div>
+
+                    <div class="mt-6">
+                        <div class="flex mb-4">
+                            <span class="flex items-center text-slate-400 text-sm">
+                                <i data-feather="clock" class="size-4 text-white me-1.5"></i>5 min read
+                            </span>
+                            <span class="text-slate-400 text-sm ms-3">
+                                by <a href="#" class="text-white hover:text-red-500 transition-all duration-500 font-medium">Travels Author</a>
+                            </span>
+                        </div>
+                        <a href="blog-detail.html" class="text-lg font-medium text-white hover:text-red-500 duration-500">This Spanish city is a feast for the eyes: Pouch Care</a>
+                        <p class="text-slate-400 mt-2">This is required when, for example, the final text is not yet available.</p>
+
+                        <div class="mt-3">
+                            <a href="blog-detail.html" class="text-white hover:text-red-500 inline-flex items-center transition-all duration-500 font-medium">
+                                Read More
+                                <i data-feather="chevron-right" class="size-4 ms-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class=" group relative overflow-hidden">
+                    <div class="relative overflow-hidden rounded-md shadow-sm shadow-gray-800">
+                        <img src="../assets/img/office2.jpg" class="group-hover:scale-110 group-hover:rotate-3 duration-500 w-full" alt="">
+                        <div class="absolute top-0 start-0 p-4 opacity-0 group-hover:opacity-100 duration-500">
+                            <span class="bg-red-500 text-white text-[12px] px-2.5 py-1 font-medium rounded-md">Tour</span>
+                        </div>
+                    </div>
+
+                    <div class="mt-6">
+                        <div class="flex mb-4">
+                            <span class="flex items-center text-slate-400 text-sm">
+                                <i data-feather="clock" class="size-4 text-white me-1.5"></i>5 min read
+                            </span>
+                            <span class="text-slate-400 text-sm ms-3">
+                                by <a href="#" class="text-white hover:text-red-500 transition-all duration-500 font-medium">Travels Author</a>
+                            </span>
+                        </div>
+                        <a href="blog-detail.html" class="text-lg font-medium text-white hover:text-red-500 duration-500">This Spanish city is a feast for the eyes: Pouch Care</a>
+                        <p class="text-slate-400 mt-2">This is required when, for example, the final text is not yet available.</p>
+
+                        <div class="mt-3">
+                            <a href="blog-detail.html" class="text-white hover:text-red-500 inline-flex items-center transition-all duration-500 font-medium">
+                                Read More
+                                <i data-feather="chevron-right" class="size-4 ms-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class=" group relative overflow-hidden">
+                    <div class="relative overflow-hidden rounded-md shadow-sm shadow-gray-800">
+                        <img src="../assets/img/island5.jpg" class="group-hover:scale-110 group-hover:rotate-3 duration-500 w-full" alt="">
+                        <div class="absolute top-0 start-0 p-4 opacity-0 group-hover:opacity-100 duration-500">
+                            <span class="bg-red-500 text-white text-[12px] px-2.5 py-1 font-medium rounded-md">Tourist</span>
+                        </div>
+                    </div>
+
+                    <div class="mt-6">
+                        <div class="flex mb-4">
+                            <span class="flex items-center text-slate-400 text-sm">
+                                <i data-feather="clock" class="size-4 text-white me-1.5"></i>5 min read
+                            </span>
+                            <span class="text-slate-400 text-sm ms-3">
+                                by <a href="#" class="text-white hover:text-red-500 transition-all duration-500 font-medium">Travels Author</a>
+                            </span>
+                        </div>
+                        <a href="blog-detail.html" class="text-lg font-medium text-white hover:text-red-500 duration-500">This Spanish city is a feast for the eyes: Pouch Care</a>
+                        <p class="text-slate-400 mt-2">This is required when, for example, the final text is not yet available.</p>
+
+                        <div class="mt-3">
+                            <a href="blog-detail.html" class="text-white hover:text-red-500 inline-flex items-center transition-all duration-500 font-medium">
+                                Read More
+                                <i data-feather="chevron-right" class="size-4 ms-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- Blog Recent Posts End -->
+        <!-- See More Blogs -->
+        <div class="text-center mt-10">
+            <a href="./blog.html" class="inline-block px-6 py-3 bg-red-500 text-white hover:text-slate-950 font-semibold rounded-md hover:bg-red-600 transition-all duration-300">See More Blogs <i data-feather="arrow-right" class="w-4 h-4 inline"></i></a>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+</section>
+<!-- Blog Section End -->
 
 
 
@@ -954,8 +1160,9 @@
 
 
 
-<!-- Js links -->
-<script src="./app.js"></script>
+
+
+
 <!-- Feather Icons -->
 <script src="https://unpkg.com/feather-icons"></script>
 <!-- Flatpickr CDN JS -->
@@ -965,95 +1172,14 @@
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script>
-    feather.replace()
-</script>
+<!-- Js links -->
+<script src="./app.js"></script>
 
 
 
 
 
 
-
-
-<script>
-  AOS.init(); // AOS init
-
-  const swiper = new Swiper(".mySwiper", {
-    slidesPerView: 1,
-    spaceBetween: 20,
-    loop: true,
-    autoplay: {
-      delay: 3500,
-      disableOnInteraction: false,
-    },
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true
-    },
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev"
-    },
-    breakpoints: {
-      768: { slidesPerView: 2 },
-      1024: { slidesPerView: 3 }
-    }
-  });
-</script>
-
-
-<script>
-  feather.replace();
-
-  function toggleFavorite(btn) {
-    const icon = btn.querySelector('i');
-    if (btn.classList.contains('active')) {
-      btn.classList.remove('active');
-      icon.classList.remove('fill-red-500');
-      icon.classList.add('text-red-500');
-    } else {
-      btn.classList.add('active');
-      icon.classList.remove('text-red-500');
-      icon.classList.add('fill-red-500');
-    }
-  }
-</script>
-
-
-<!-- Counter Animation JS -->
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const counters = document.querySelectorAll(".counter");
-    const speed = 100; // Lower = faster
-
-    counters.forEach(counter => {
-      const animate = () => {
-        const target = +counter.getAttribute("data-target");
-        const count = +counter.innerText;
-        const inc = Math.ceil(target / speed);
-
-        if (count < target) {
-          counter.innerText = count + inc;
-          setTimeout(animate, 10);
-        } else {
-          counter.innerText = target;
-        }
-      };
-
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            animate();
-            observer.unobserve(counter);
-          }
-        });
-      }, { threshold: 0.5 });
-
-      observer.observe(counter);
-    });
-  });
-</script>
 
 
 
