--- a/src/home.html
+++ b/src/home.html
@@ -1152,14 +1152,104 @@
 </section>
 <!-- Blog Section End -->
 
+<!-- Footer Start -->
+<footer class="footer bg-slate-900 dark:bg-slate-800 relative text-gray-200 dark:text-gray-200">
+    <div class="container mx-auto relative px-3 md:px-6 lg:px-8">
+        <div class="grid grid-cols-12">
+            <div class="col-span-12">
+                <div class="py-[60px] px-0">
+                    <div class="grid md:grid-cols-12 grid-cols-1 gap-6">
 
+                        <!-- Logo & About -->
+                        <div class="lg:col-span-3 md:col-span-12">
+                            <a href="#" class="text-[22px] focus:outline-none">
+                                <img src="../assets/img/logo.webp" alt="Pouch Care Logo" class="h-20 w-auto">
+                            </a>
+                            <p class="mt-6 text-gray-300">Pouch Care is a travel agency that specializes in providing personalized travel experiences to its clients.</p>
+                            <ul class="list-none mt-6 flex gap-2 flex-wrap">
+                                <!-- Social Icons -->
+                                <li><a href="#" class="size-8 inline-flex items-center justify-center border border-gray-800 transition-all duration-300 rounded-md hover:bg-red-500 hover:text-white text-slate-300"><i data-feather="facebook"></i></a></li>
+                                <li><a href="#" class="size-8 inline-flex items-center justify-center border border-gray-800 transition-all duration-300 rounded-md hover:bg-red-500 hover:text-white text-slate-300"><i data-feather="twitter"></i></a></li>
+                                <li><a href="#" class="size-8 inline-flex items-center justify-center border border-gray-800 transition-all duration-300 rounded-md hover:bg-red-500 hover:text-white text-slate-300"><i data-feather="instagram"></i></a></li>
+                                <li><a href="#" class="size-8 inline-flex items-center justify-center border border-gray-800 transition-all duration-300 rounded-md hover:bg-red-500 hover:text-white text-slate-300"><i data-feather="linkedin"></i></a></li>
+                                <li><a href="mailto:contact@example.com" class="size-8 inline-flex items-center justify-center border border-gray-800 transition-all duration-300 rounded-md hover:bg-red-500 hover:text-white text-slate-300"><i data-feather="mail"></i></a></li>
+                            </ul>
+                        </div>
 
+                        <!-- Office Info -->
+                        <div class="lg:col-span-3 md:col-span-4">
+                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Office</h5>
+                            <h5 class="tracking-[1px] text-gray-100 mt-6">Pouch Care Tour & Travels Agency</h5>
+                            <div class="flex mt-4">
+                                <i data-feather="map-pin" class="text-red-500 me-2 mt-1 w-10"></i>
+                                <p class="text-gray-300">New Belly Road, Fulpur, Mymensingh, Bangladesh</p>
+                            </div>
+                            <div class="flex mt-4">
+                                <i data-feather="mail" class="text-red-500 me-2 mt-1"></i>
+                                <a href="mailto:contact@example.com" class="text-slate-300 hover:text-red-600 transition-all duration-500">contact@example.com</a>
+                            </div>
+                            <div class="flex mt-4">
+                                <i data-feather="phone" class="text-red-500 me-2 mt-1"></i>
+                                <a href="tel:+152534-468-854" class="text-slate-300 hover:text-red-600 transition-all duration-500">+152 534-468-854</a>
+                            </div>
+                        </div>
 
+                        <!-- Company Links -->
+                        <div class="lg:col-span-3 md:col-span-4">
+                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Company</h5>
+                            <ul class="list-none mt-6 space-y-2">
+                                <li><a href="aboutus.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    About us</a></li>
+                                <li><a href="services.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    Services</a></li>
+                                <li><a href="team.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    Team</a></li>
+                                <li><a href="pricing.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    Pricing</a></li>
+                                <li><a href="blogs.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    Blog</a></li>
+                                <li><a href="login.html" class="text-gray-300 hover:text-red-600 duration-500">
+                                    <i data-feather="chevron-right" class="w-4 h-4 inline"></i>
+                                    Login</a></li>
+                            </ul>
+                        </div>
 
+                        <!-- Newsletter -->
+                        <div class="lg:col-span-3 md:col-span-4">
+                            <h5 class="tracking-[1px] text-gray-100 font-semibold">Newsletter</h5>
+                            <p class="mt-6">Sign up and receive the latest tips via email.</p>
+                            <form class="mt-4">
+                                <label class="block mb-2 text-sm">Write your email <span class="text-red-600">*</span></label>
+                                <div class="relative">
+                                    <i data-feather="mail" class="absolute left-3 top-3 text-gray-400"></i>
+                                    <input type="email" name="email" placeholder="Email" required class="pl-10 py-2 px-3 h-10 w-full bg-gray-800 dark:bg-gray-700 border-0 text-gray-100 rounded-md outline-none">
+                                </div>
+                                <button type="submit" class="mt-3 py-2 px-5 bg-red-500 text-white hover:text-slate-950 font-semibold rounded-md hover:bg-red-600 transition-all duration-300 w-full">Subscribe
+                                    <i data-feather="send" class="w-4 h-4 inline"></i>
+                                </button>
+                            </form>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-
+    <div class="py-6 border-t border-gray-800 dark:border-gray-700">
+        <div class="container mx-auto text-center">
+            <p class="text-sm flex items-center justify-center gap-1">
+                © <script>document.write(new Date().getFullYear())</script> 2025 Pouch Care Travel Agency. Design with <i data-feather="heart" class="fill-red-600 text-red-600 w-4 h-4"></i> by
+                <a href="https://github.com/z4codelearner" target="_blank" class="text-slate-300 hover:text-white">Z4Code</a>.</p>
+        </div>
+    </div>
+</footer>
+<!-- Footer End -->
 
 
 
@@ -1171,27 +1261,8 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
 <!-- Js links -->
 <script src="./app.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
